--- a/pages/freelancerlogin.html
+++ b/pages/freelancerlogin.html
@@ -1,57 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Freelance Marketplace</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="./../layout/styles/freelancerlogin.css" type="text/css" />
-<script type="text/javascript" src="layout/scripts/jquery.min.js"></script>
-<!-- Featured Slider  -->
-<script type="text/javascript" src="layout/scripts/jquery-s3slider.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-    $("#featured_slide_").s3Slider({
-        timeOut:10000 
-    });
-});
-</script>
-<!-- / Featured Slider -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Freelance Marketplace - Login</title>
+    <link rel="stylesheet" href="./../layout/styles/freelancerlogin.css"> <!-- Link to your CSS file -->
+    <script type="text/javascript" src="layout/scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="layout/scripts/jquery-s3slider.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#featured_slide_").s3Slider({
+                timeOut: 10000
+            });
+        });
+    </script>
 </head>
 <body id="top">
-<div class="wrapper row2">
-  <div id="header" class="clear">
-    <div class="fl_left">
-      <h1><a href="./../index.html">Freelance Marketplace</a></h1>
-      <p>Connecting Talent with Opportunity</p>
+    <div class="wrapper row2">
+        <div id="header" class="clear">
+            <div class="fl_left">
+                <h1><a href="./../index.html">Freelance Marketplace</a></h1>
+                <p>Connecting Talent with Opportunity</p>
+            </div>
+            <div class="fl_right">
+                <p>
+                    <a href="freelancerlogin.html">Freelancer Login</a> &nbsp; | &nbsp;
+                    <a href="employerlogin.html">Employer Login</a> &nbsp; | &nbsp;
+                    <a href="register.html">Sign Up</a>
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="fl_right">
-      <p> <a href="#">Freelancer Login</a> &nbsp; | &nbsp; <a href="employerlogin.html">Employer Login</a> &nbsp; | &nbsp; <a href="register.html">Sign Up</a> </p>
+    <div class="login-container">
+        <div class="login-form">
+            <h2>Freelancer Login</h2>
+            <form action="freelancer_login_process.php" method="POST">
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <div class="input-group">
+                    <input type="checkbox" id="remember" name="remember">
+                    <label for="remember">Remember Me</label>
+                </div>
+                <button type="submit">Login</button>
+                <a href="forgot_password.html">Forgot Password?</a>
+                <div class="register-container">
+                    <span>Don't have an account?</span> 
+                    <a href="register.html">Register now</a>
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
-</div><br><br><br>
-<div class="login-container">
-    <div class="login-form">
-        <h2>Freelancer Login</h2>
-        <form action="freelancer_login_process.php" method="POST">
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="input-group">
-                <input type="checkbox" id="remember" name="remember">
-                <label for="remember">Remember Me</label>
-            </div>
-            <button type="submit">Login</button>
-            <a href="forgot_password.html   ">Forgot Password?</a>
-            <div class="register-container">
-                <span>Don't have an account?</span> 
-                <a href="register.html">Register now</a>
-            </div>
-        </form>
-    </div>
-</div>
 </body>
 </html>
