Major UI updates.

--- a/pages/freelancerlogin.html
+++ b/pages/freelancerlogin.html
@@ -17,14 +17,13 @@
 </head>
 <body id="top">
     <div class="wrapper row2">
+        
         <div id="header" class="clear">
-            <div class="fl_left">
-                <h1><a href="./../index.html">Freelance Marketplace</a></h1>
-                <p>Connecting Talent with Opportunity</p>
-            </div>
+
             <div class="fl_right">
                 <p>
-                    <a href="freelancerlogin.html">Freelancer Login</a> &nbsp; | &nbsp;
+                    <a href="./../index.html">Home</a> &nbsp; | &nbsp;
+                    <a href="freelancerlogin.html" class="current">Freelancer Login</a> &nbsp; | &nbsp;
                     <a href="employerlogin.html">Employer Login</a> &nbsp; | &nbsp;
                     <a href="register.html">Sign Up</a>
                 </p>
@@ -49,9 +48,8 @@
                 </div>
                 <button type="submit">Login</button>
                 <a href="forgot_password.html">Forgot Password?</a>
-                <div class="register-container">
-                    <span>Don't have an account?</span> 
-                    <a href="register.html">Register now</a>
+                <div class="regnow">
+                    <a href="register.html"><span>Don't have an account?</span> Register now</a>
                 </div>
             </form>
         </div>
