--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="hero_area">
     <header class="header_section">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
+        <nav class="navbar navbar-expand-lg custom_nav-container p-5">
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
             <span>
