--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body class="sub_page ">
   <div class="hero_area">
     <header class="header_section">
-      <div class="container-fluid">
+      <div class="container-fluid about_page">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <!-- <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="" />
