--- a/index.html
+++ b/index.html
@@ -323,130 +323,6 @@
     </div>
   </section>
 
-
-  <section class="section-3 layout_padding">
-    <div class="container">
-
-      <div class="detail-box responsive-flex">
-        <section class="flex-item">
-          <h2>For Freelancers</h2>
-          <ol >
-            <li >
-              <h3>Sign Up</h3>
-              <p>Create an account by providing your personal information and setting up your profile. Highlight your
-                skills, experience, and portfolio to attract potential clients.</p>
-            </li>
-            <li>
-              <h3>Browse Job Listings</h3>
-              <p>Explore the job listings posted by clients. Use the search and filter options to find projects that
-                match your skills and interests.</p>
-            </li>
-            <li>
-              <h3>Submit Proposals</h3>
-              <p>When you find a job that suits you, submit a proposal. Describe how you can meet the client's needs,
-                provide a timeline, and quote your rate.</p>
-            </li>
-            <li>
-              <h3>Get Hired</h3>
-              <p>Clients will review your proposal and profile. If selected, you will receive a notification and can
-                start working on the project.</p>
-            </li>
-            <li>
-              <h3>Complete the Project</h3>
-              <p>Work on the project and communicate with the client through our messaging system. Deliver high-quality
-                work to meet the client's expectations.</p>
-            </li>
-            <li>
-              <h3>Receive Payment</h3>
-              <p>Once the project is completed and approved, the payment will be processed securely through our
-                platform. Withdraw your earnings through various available methods.</p>
-            </li>
-          </ol>
-        </section><br>
-
-        <section class="flex-item">
-          <h2>For Clients</h2>
-          <ol>
-            <li>
-              <h3>Sign Up</h3>
-              <p>Create an account by providing your business information. Set up your profile to post job listings and
-                manage projects.</p>
-            </li>
-            <li>
-              <h3>Post a Job</h3>
-              <p>Create a detailed job listing, including project requirements, budget, and deadlines. The more detailed
-                your listing, the better the responses you will receive.</p>
-            </li>
-            <li>
-              <h3>Review Proposals</h3>
-              <p>Review the proposals submitted by freelancers. Check their profiles, past work, and ratings to find the
-                best match for your project.</p>
-            </li>
-            <li>
-              <h3>Hire a Freelancer</h3>
-              <p>Select the freelancer that best fits your project needs. Agree on terms and start the project.</p>
-            </li>
-            <li>
-              <h3>Manage the Project</h3>
-              <p>Use our project management tools to track progress, communicate with the freelancer, and ensure the
-                project stays on track.</p>
-            </li>
-            <li>
-              <h3>Approve and Pay</h3>
-              <p>Once the project is completed to your satisfaction, approve the work and release the payment. Leave a
-                review for the freelancer to help others in the community.</p>
-            </li>
-          </ol>
-        </section><br>
-
-        <section class="flex-item">
-          <h2>Security and Support</h2>
-          <ul>
-            <li>
-              <h3>Secure Payments</h3>
-              <p>All payments are processed securely through our platform. We use advanced security measures to protect
-                your financial information.</p>
-            </li>
-            <li>
-              <h3>Dispute Resolution</h3>
-              <p>In case of any disputes, our support team is here to assist. We offer mediation services to ensure fair
-                resolutions for both freelancers and clients.</p>
-            </li>
-            <li>
-              <h3>24/7 Support</h3>
-              <p>Our dedicated support team is available 24/7 to help you with any issues or questions you may have.
-                Contact us anytime for assistance.</p>
-            </li>
-          </ul>
-        </section><br>
-
-        <section class="flex-item">
-          <h2>Additional Features</h2>
-          <ul>
-            <li>
-              <h3>Skill Development</h3>
-              <p>We offer resources and training programs to help freelancers enhance their skills and stay competitive
-                in the market. Access workshops, webinars, and online courses directly through our platform.</p>
-            </li>
-            <li>
-              <h3>Community and Networking</h3>
-              <p>Join our community of professionals. Network with other freelancers and clients, share experiences, and
-                grow your professional connections.</p>
-            </li>
-            <li>
-              <h3>Project Management Tools</h3>
-              <p>Take advantage of our integrated project management tools. From task assignment to progress tracking,
-                we provide everything you need to manage your projects efficiently.</p>
-            </li>
-          </ul>
-        </section>
-      </div>
-    </div>
-    </div>
-  </section>
-
-
-
   <section class="section-4 ">
     <div id="accordion">
       <div class="container-fluid">
@@ -672,11 +548,9 @@
                 <h5>
                   Email
                 </h5>
-                <form action="">
-                  <input type="email" placeholder="Email">
-                  <button>
-                    Submit
-                  </button>
+                <form id="emailForm" onsubmit="sendEmail(event)">
+                  <input type="email" id="emailInput" placeholder="Email" required>
+                  <button type="submit">Submit</button>
                 </form>
               </div>
             </div>
