--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
   </div>
 
 
-<div class="container-lg">
+<div class="conatiner-lg-bg-white">
   <div class="detail-box responsive-flex">
     <section class="section-4 ">
       <div id="accordion">
