added payment processing - flutterwave

--- a/pages/button.html
+++ b/pages/button.html
@@ -48,9 +48,9 @@
 <div class="container">
     <h1>Ready to Start the Job?</h1>
     <p>In order to start the job, the employer must first deposit funds into the escrow account. This ensures the freelancer will be paid upon successful completion of the project.</p>
-
+    
     <div class="button-container">
-        <a href="payment.html" class="start-job-button">Start the Job</a>
+        <a href="./payment/index.php" class="start-job-button">Start the Job</a>
     </div>
 </div>
 
