--- a/pages/register.html
+++ b/pages/register.html
@@ -41,7 +41,7 @@
 
             <div class="form-content">
                 <h1> Freelance MarketPlace</h1>
-                <p>let's sign you up</p>
+                <p>Let's Sign You Up!</p>
                 <label for="user-type">I am a:</label>
             <select id="user-type" name="user_type" required>
                 <option value="freelancer">Freelancer</option>
